# actionsInAction

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml  test_and_build.yml
src/add_calculator/: __init__.py  calculator.py  cli.py
tests/: test_calculator.py
