[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actions-in-action"
version = "0.1.0"
description = "A simple Python calculator app that only adds numbers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
add-calculator = "add_calculator.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/add_calculator"]
